--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "mui-layout": "^1.2.9",
     "multer": "^1.4.2",
     "react": "^16.13.0",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
@@ -37,6 +38,7 @@
       "not op_mini all"
     ],
     "development": [
+      "ie 11",
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
